GOVSI-670: Protect transitions in `VerifyCodeHandler` for phone numbers